--- a/package.json
+++ b/package.json
@@ -9,36 +9,35 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "apps:affected": "./node_modules/.bin/nx affected apps",
-    "build:affected": "./node_modules/.bin/nx affected build",
-    "e2e:affected": "./node_modules/.bin/nx affected e2e",
     "affected:apps": "./node_modules/.bin/nx affected apps",
     "affected:build": "./node_modules/.bin/nx affected build",
     "affected:e2e": "./node_modules/.bin/nx affected e2e",
     "format": "./node_modules/.bin/nx format write",
     "format:write": "./node_modules/.bin/nx format write",
     "format:check": "./node_modules/.bin/nx format check",
-    "nx-migrate": "./node_modules/.bin/nx migrate",
-    "nx-migrate:check": "./node_modules/.bin/nx migrate check",
-    "nx-migrate:skip": "./node_modules/.bin/nx migrate skip",
-    "postinstall": "./node_modules/.bin/nx migrate check",
-    "storybook": "start-storybook -p 9001 -c .storybook"
+    "postinstall": "./node_modules/.bin/nx postinstall",
+    "storybook": "start-storybook -p 9001 -c .storybook",
+    "update": "./node_modules/.bin/nx update",
+    "update:check": "./node_modules/.bin/nx update check",
+    "update:skip": "./node_modules/.bin/nx update skip"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "6.0.0-beta.5",
-    "@angular/common": "6.0.0-beta.5",
-    "@angular/compiler": "6.0.0-beta.5",
-    "@angular/core": "6.0.0-beta.5",
-    "@angular/forms": "6.0.0-beta.5",
-    "@angular/platform-browser": "6.0.0-beta.5",
-    "@angular/platform-browser-dynamic": "6.0.0-beta.5",
-    "@angular/router": "6.0.0-beta.5",
-    "@ngrx/effects": "4.1.1",
-    "@ngrx/router-store": "4.1.1",
-    "@ngrx/store": "4.1.1",
-    "@ngrx/store-devtools": "4.0.0",
-    "@nrwl/nx": "0.7.4",
+    "@angular/animations": "5.2.8",
+    "@angular/common": "5.2.8",
+    "@angular/compiler": "5.2.8",
+    "@angular/core": "5.2.8",
+    "@angular/forms": "5.2.8",
+    "@angular/http": "^5.2.8",
+    "@angular/platform-browser": "5.2.8",
+    "@angular/platform-browser-dynamic": "5.2.8",
+    "@angular/platform-server": "5.2.8",
+    "@angular/router": "5.2.8",
+    "@ngrx/effects": "5.1.0",
+    "@ngrx/router-store": "5.0.1",
+    "@ngrx/store": "5.1.0",
+    "@ngrx/store-devtools": "5.1.0",
+    "@nrwl/nx": "0.9.0-beta.5",
     "@storybook/angular": "3.4.0-alpha.9",
     "babel-core": "^6.26.0",
     "core-js": "^2.4.1",
@@ -46,13 +45,10 @@
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
-    "@angular-devkit/core": "^0.0.29",
-    "@angular-devkit/schematics": "0.0.52",
-    "@angular/cli": "file:.angular_cli165.tgz",
-    "@angular/compiler-cli": "6.0.0-beta.5",
-    "@angular/language-service": "6.0.0-beta.5",
-    "@nrwl/schematics": "0.7.4",
-    "@schematics/angular": "0.1.17",
+    "@angular/cli": "1.7.1",
+    "@angular/compiler-cli": "5.2.8",
+    "@angular/language-service": "5.2.8",
+    "@nrwl/schematics": "0.9.0-beta.5",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
@@ -61,7 +57,6 @@
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~2.0.0",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-cli": "~1.0.1",
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
