--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@
 
 # dependencies
 /node_modules
+/functions/node_modules
+/functions/lib
 
 # IDEs and editors
 /.idea
@@ -30,6 +32,7 @@
 /coverage
 /libpeerconnection.log
 npm-debug.log
+yarn-error.log
 testem.log
 /typings
 
