--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
+    "serve:site": "ng serve -a website-app --aot",
+    "build:backend-data": "./node_modules/.bin/tsc -p ./backend/data/tsconfig.json",
+    "serve:backend-data": "npm run build:backend-data && node ./dist/backend/data/index.js",
     "affected:apps": "./node_modules/.bin/nx affected apps",
     "affected:build": "./node_modules/.bin/nx affected build",
     "affected:e2e": "./node_modules/.bin/nx affected e2e",
@@ -38,9 +41,23 @@
     "@ngrx/store": "5.1.0",
     "@ngrx/store-devtools": "5.1.0",
     "@nrwl/nx": "0.9.0-beta.5",
+    "@storybook/addon-actions": "^3.3.15",
     "@storybook/angular": "3.4.0-alpha.9",
+    "@types/graphql": "^0.12.5",
+    "apollo-angular": "^1.0.1",
+    "apollo-angular-link-http": "^1.0.2-beta.0",
+    "apollo-cache-inmemory": "^1.1.11",
+    "apollo-client": "^2.2.7",
+    "apollo-server-express": "^1.3.2",
     "babel-core": "^6.26.0",
+    "body-parser": "^1.18.2",
     "core-js": "^2.4.1",
+    "express": "^4.16.3",
+    "global": "^4.3.2",
+    "graphql": "^0.13.1",
+    "graphql-tag": "^2.8.0",
+    "graphql-tools": "^2.23.0",
+    "npm": "^5.7.1",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
@@ -49,6 +66,8 @@
     "@angular/compiler-cli": "5.2.8",
     "@angular/language-service": "5.2.8",
     "@nrwl/schematics": "0.9.0-beta.5",
+    "@types/body-parser": "1.16.8",
+    "@types/express": "4.11.1",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
