--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,8 @@
     ],
     "lib": [
       "es2017",
-      "dom"
+      "dom",
+      "esnext.asynciterable"
     ],
     "baseUrl": ".",
     "paths": {
